Fix UI table layout issue on Config Summaries
Reviewed at https://reviews.apache.org/r/65477/

--- a/ui/src/main/sass/components/_job-page.scss
+++ b/ui/src/main/sass/components/_job-page.scss
@@ -83,6 +83,10 @@
     th {
       text-transform: uppercase;
     }
+
+    th, td {
+      word-break: break-word;
+    }
   }
 
   .update-preview {
